# crawler-zsxq

./: .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  Dockerfile  README.md  mkdocs.yml  noxfile.py  pyproject.toml
.github/workflows/: ci.yml  coverage.yml  deploy_gh.yml  docker.yml  format.yml
docs/: index.md
docs/reference/: SUMMARY.md
docs/reference/crawler_zsxq/: __init__.md  cli.md  lib.md
src/crawler_zsxq/: cli.py  lib.py
tests/: test_demo.py
