[tool.poetry]
    name        = "crawler-zsxq"
    version     = "0.1.0"
    description = "ZSXQ's crawler."
    license     = "Apache-2.0"
    authors     = ["Alex <30626291+Spehhhhh@users.noreply.github.com>"]
    maintainers = ["Alex <30626291+Spehhhhh@users.noreply.github.com>"]
    readme      = "README.md"
    # homepage      = ""
    # repository    = ""
    # documentation = ""
    keywords = ["crawler", "tools"]
    # classifiers = [
    #     "Environment :: Console",
    #     "Framework :: Flake8",
    #     "Operating System :: OS Independent",
    #     "Topic :: Software Development :: Documentation",
    #     "Topic :: Software Development :: Libraries :: Python Modules",
    #     "Topic :: Software Development :: Quality Assurance",
    # ]
    include = ["LICENSE"]

[tool.poetry.dependencies]
    Pillow         = "^9.1.0"
    beautifulsoup4 = "^4.11.1"
    colorama       = "^0.4.4"
    markdownify    = "^0.11.2"
    python         = ">=3.8,<3.11"
    rich           = "^12.4.4"
    schedule       = "^1.1.0"
    tqdm           = "^4.64.0"
    typer          = "^0.4.1"


[tool.poetry.dev-dependencies]
    # Static Type Checker
    mypy = "^0.950"
    # Linter
    flake8                = "^4.0.1"
    flake8-broken-line    = "^0.4.0"
    flake8-bugbear        = "^22.4.25"
    flake8-comprehensions = "^3.8.0"
    mccabe                = "0.6.1"
    pep8-naming           = "^0.12.1"
    pyflakes              = "^2.4.0"
    pylint                = "^2.13.8"
    # Formatter
    black        = "^22.3.0"
    blacken-docs = "^1.12.1"
    isort        = "^5.10.1"
    # Unit Testing
    coverage   = { version = "^6.3.2", extras = ["toml"] }
    pytest     = "^7.1.2"
    pytest-cov = "^3.0.0"
    # Automation
    commitizen = "^2.25.0"
    nox        = "^2022.1.7"
    nox-poetry = "^0.9.0"
    pre-commit = "^2.19.0"
    # Build
    # build = "^0.7.0"
    # Debug
    loguru    = "^0.6.0"
    viztracer = "^0.15.1"
    # Documentation
    mkdocs-htmlproofer-plugin = "^0.8.0"
    mkdocs-material           = "^8.2.14"
    mkdocstrings              = { version = "^0.18.1", extras = ["python"] }
    # Documentation (Auto)
    mkdocs-gen-files    = "^0.3.4"
    mkdocs-literate-nav = "^0.4.1"
    # Other dependencies
    pyupgrade = "^2.32.1"

[tool.mypy]
    ignore_missing_imports = true
    strict                 = true

[tool.black]
    # Use the more relaxed max line length permitted in PEP 8.
    line-length = 99

[tool.isort]
    line_length                = 99
    skip_gitignore             = true
    force_sort_within_sections = true
    profile                    = "black"
    # Skip __init__.py and other files
    extend_skip_glob = [
        ".*",
        "*/site-packages/*",
        "*/__init__.py",
        "*/__main__.py",
        "*/tests",
        "*/excp.py",
    ]

[tool.pytest.ini_options]
    filterwarnings = ["error"]
    python_files   = ["test_*.py"]
    testpaths      = ["tests"]

[tool.coverage.run]
    branch = true
    omit = [
        ".*",
        "*/site-packages/*",
        "*/__init__.py",
        "*/__main__.py",
        "*/tests",
        "*/excp.py",
    ]

[tool.coverage.report]
    fail_under   = 80
    show_missing = true

[tool.commitizen]
    name       = "cz_conventional_commits"
    tag_format = "v$version"
    version    = "0.1.1"

[build-system]
    build-backend = "poetry.core.masonry.api"
    requires      = ["poetry_core>=1.0.0"]
